--- a/Week_1_Assignment.Rmd
+++ b/Week_1_Assignment.Rmd
@@ -89,7 +89,13 @@ plot(cars)
 ## Add a new code block
 Add a new code chunk below this line by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
+```{r}
 
+```
+
+```{r}
+view(cars)
+```
 
 ## Save your output.
 Save this assignment as a markdown file by following these steps:
